--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -2,7 +2,7 @@
   font-size: 115%;
   text-align: justify;
   width: 42em;
-  margin: 0em auto 2em;
+  margin: 0em auto;
   line-height: 1.5em;
 
   img {
